2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2015-02-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import musixtnt-2015-02-09.
