@@ -1,3 +1,7 @@
+2015-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* ac/web2c.ac: Update some help texts.
+
 2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Use the fragment ../../am/dist_hook.am.
